<resources>
    <string name="app_name">nForce</string>

    <!-- Dialog message -->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="no_internet_msg_main">This Application required internet connection. Please check your internet setting and try again.</string>
    <string name="no_internet_title">No internet</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="note">Write your note</string>
    <string name="send">Submit</string>

    <string name="verify">Verify</string>


    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="relogin">Saved to offline db, Relogin and submit.</string>
    <string name="please_check_with_user_name_and_password">Please check with user name and password</string>
    <string name="number_digits">0123456789</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="empty">empty</string>
    <string name="cancel">Cancel</string>
    <string name="accept_small">accept</string>
    <string name="logout">Logout</string>

    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="customer_name">Customer name</string>
    <string name="decline">Decline</string>
    <string name="delivery_date">Next Appointment</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="check_icon">&#xE5CA;</string>
    <string name="move_vert_icon">&#xE5D4;</string>
    <string name="mobile_number">Mobile number</string>

    <string name="data_sent_successfully">Data sent successfully,</string>
    <string name="switch_off_your_location_to_save_battery">Switch off your location to save battery</string>
    <string name="data_stored_successfully">Data Stored in local DB,</string>

    <string name="loginLogo">Logo</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="hint_pin">Enter Pin</string>
    <string name="forgotPin">Forgot Pin</string>
    <string name="copyrights">Copyright © nForce 2018.</string>
    <string name="reseved">All Rights Reserved</string>
    <string name="more">More</string>
    <string name="conf_pickup">Locate</string>
    <string name="action_logout">Logout</string>
    <string name="action_recent_trip">Recent Trips</string>

    <string name="nine_ninety">0</string>
    <string name="count">Count</string>
    <string name="home">Home</string>
    <string name="doctors_visit">Doctors Visit</string>
    <string name="inventory">Orders</string>
    <string name="submit">Submit</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="medicines">Medicines</string>
    <string name="email">Email</string>
    <string name="write_here">Write here</string>
    <string name="search">Search</string>
    <string name="search_icon">&#xE8B6;</string>
    <string name="summery">summary</string>

    <string name="update_version"> A New version is available on playstore. Do you want to install?</string>
    <string name="press_again_to_exit">Press Again to Exit</string>
</resources>
