<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_120dp"
        android:src="@drawable/ic_launcher_app_level" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15dp"
        android:background="@drawable/drawable_login_button"
        android:digits="@string/number_digits"
        android:gravity="center"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="number|textNoSuggestions"
        android:maxLength="10"
        android:maxLines="1"
        android:minHeight="@dimen/_40dp"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:background="@drawable/drawable_login_button"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="@dimen/_40dp"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/_20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:background="@drawable/login_button"
        android:minHeight="@dimen/_50dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20sp" />
</LinearLayout>
