<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icue_logo"
            android:layout_width="@dimen/_120dp"
            android:layout_height="@dimen/_120dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/loginLogo"
            android:padding="@dimen/_10sp"
            android:src="@drawable/logo_copy" />

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icue_logo"
            android:layout_marginBottom="40dp"
            android:paddingTop="20dp">

            <RelativeLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/edit_hint_color" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/pin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_layout"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/hint_pin"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/edit_hint_color" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pin_layout"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/ellipse_shape"
                android:contentDescription="@string/login"
                android:onClick="login"
                android:src="@drawable/arrow_forward" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/login_layout"
            android:gravity="center"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/copyright1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/copyrights"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/copyright2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/copyright1"
                android:layout_centerHorizontal="true"
                android:text="@string/reseved"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>