<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="@dimen/_40dp"
        android:text="@string/verify"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="@string/enter_otp"
            android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
            android:maxLength="5"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_default_size_medium" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <Button
            android:id="@+id/btn_cancel"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/alert_dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_ok"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/alert_dialog_ok"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>
</LinearLayout>
