<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:background="@color/dialog_header_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_weight="1"
            android:text="@string/medicines"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sp" />

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_20dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10dp"
            android:src="@drawable/close_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/search_boarder_round_corners"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:paddingEnd="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:textColor="@color/colorblack"
            android:textColorHint="@color/colorblack" />

        <TextView
            android:id="@+id/tv_et_search_image"
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/search_icon"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/_20sp" />
    </LinearLayout>


    <ListView
        android:id="@+id/lv_medicines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorWhite" />

</LinearLayout>